# execexam

./: .coveragerc  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  badges.py  config.yml  coverage.json  generate_coverage.py  pyproject.toml  pytest.ini  source_file.py  temp_test_module.py  version.json
.github/: SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: blank-template.md  bug_report.md  feature_request.md
.github/workflows/: build.yml  ci.yml  publish.yml  release.yml  test-publish.yml  test-release.yml  test_release.yml
execexam/: advise.py  cli.py  convert.py  debug.py  display.py  enumerations.py  exceptions.py  extract.py  main.py  pytest_plugin.py  util.py
scripts/: badges.py
tests/: __init__.py  test_advise.py  test_convert.py  test_debug.py  test_display.py  test_enumerations.py  test_exceptions.py  test_extract.py  test_main.py  test_pytest_plugin.py  test_util.py
