[tool.poetry]
name = "execexam"
version = "0.1.2"
description = ""
authors = ["Gregory M. Kapfhammer <gkapfham@allegheny.edu>"]
readme = "README.md"

[tool.poetry.scripts]
execexam = "execexam.main:cli"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.1.1"
pytest-json-report = "^1.5.0"
rich = "^13.7.1"
coverage = "^7.4.3"
pytest-cov = "^4.1.0"
typer = "^0.12.3"
litellm = {extras = ["proxy"], version = "^1.43.15"}
openai = "^1.41.0"

[tool.poetry.plugins.pytest11]
"execexam" = "execexam.pytest_plugin"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
]
enable_assertion_pass_hook = true

[tool.ruff]
line-length = 79
ignore = [
    "E501", # do not check line length
]
select = [
    "E",    # pycodestyle errors
    "I",    # isort
    "F",    # Pyflakes
    "PL",   # pylint
    "Q",    # flake8-quotes
    "RUF",  # ruff-specific
    "W",    # pycodestyle warnings
    "T201"  # flake8-print
]

[tool.isort]
include_trailing_comma = true
force_single_line = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
